--- a/cont_frontend_solo_project/index.html
+++ b/cont_frontend_solo_project/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/openingStyle_ver2.css">
     <link rel="stylesheet" href="./css/keyframes.css">
+    <link rel="stylesheet" href="./css/mainResponsiveQuery.css">
 
     <title>page1. opening</title>
 </head>
