--- a/cont_frontend_solo_project/duckroom.html
+++ b/cont_frontend_solo_project/duckroom.html
@@ -69,10 +69,10 @@
     <div class="flex-shrink-0 bg-success p-3 rounded-start">
       <ul class="list-unstyled ps-0">
         <li class="mb-1">
-          <button onclick="redirectToIndex()" class="btn text-light btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse">
+          <button onclick="redirectToIndex()" class="btn text-light btn-toggle d-inline-flex align-items-center btn-block-display rounded border-0 collapse" data-bs-toggle="collapse">
             <b> 푸린씨의 무대</b>
-          </button>
-          <button class="btn text-light btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
+          </button><br>
+          <button class="btn text-light btn-toggle d-inline-flex align-items-center btn-block-display rounded border-0 collapse" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
             <b>뭐라도 좀 먹을까?</b>
           </button>
           <div class="collapse" id="home-collapse">
@@ -88,7 +88,7 @@
           </div>
         </li>
         <li class="mb-1">
-          <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed text-light" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
+          <button class="btn btn-toggle d-inline-flex align-items-centerbtn-block-display  rounded border-0 collapsed text-light" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
             <b> 메뉴 생각중 </b>
           </button>
           <div class="collapse" id="dashboard-collapse">
@@ -100,12 +100,12 @@
             </ul>
           </div>
         </li>
-        <button onclick="changePage()" class="btn text-light btn-toggle d-inline-flex align-items-center rounded border-0 collapsed">
+        <button onclick="changePage()" class="btn text-light btn-block-display btn-toggle d-inline-flex align-items-center rounded border-0 collapsed">
           <b> 오리네 집으로</b>
         </button>
       </ul>
     </div>
-  </aside> 
+  </aside>
 
   <!-- footer -->
   <footer class="bg-success text-white mt-5 py-3">
