--- a/cont_frontend_solo_project/mainpage.html
+++ b/cont_frontend_solo_project/mainpage.html
@@ -218,10 +218,10 @@
     <div class="flex-shrink-0 bg-success p-3 rounded-start">
       <ul class="list-unstyled ps-0">
         <li class="mb-1">
-          <button onclick="redirectToIndex()" class="btn text-light btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse">
+          <button onclick="redirectToIndex()" class="btn text-light btn-toggle d-inline-flex align-items-centerrounded border-0 collapse" data-bs-toggle="collapse">
             <b> 푸린씨의 무대</b>
-          </button>
-          <button class="btn text-light btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
+          </button><br>
+          <button class="btn text-light btn-toggle d-inline-flex align-items-centerrounded border-0 collapse" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
             <b>뭐라도 좀 먹을까?</b>
           </button>
           <div class="collapse" id="home-collapse">
@@ -254,7 +254,7 @@
         </button>
       </ul>
     </div>
-  </aside> 
+  </aside>
   <!-- footer -->
   <footer class="bg-success text-white mt-5 py-3">
     <div class="container text-center">
