--- a/cont_frontend_solo_project/duckroom.html
+++ b/cont_frontend_solo_project/duckroom.html
@@ -15,8 +15,8 @@
   <link rel="stylesheet" href="./css/mainStyle.css">
   <link rel="stylesheet" href="./css/main_toy.css">
   <link rel="stylesheet" href="./css/main_toy_animation.css">
-  <link rel="stylesheet" href="./css/mainResponsiveQuery.css">
   <link rel="stylesheet" href="./css/duckroom_style.css">
+  <link rel="stylesheet" href="./css/mainResponsiveQuery.css">
 
 </head>
 <body>
@@ -69,26 +69,27 @@
     <div class="flex-shrink-0 bg-success p-3 rounded-start">
       <ul class="list-unstyled ps-0">
         <li class="mb-1">
-          <button onclick="redirectToIndex()" class="btn text-light btn-toggle d-inline-flex align-items-center btn-block-display rounded border-0 collapse" data-bs-toggle="collapse">
+          <button onclick="redirectToIndex()" class="btn text-light btn-toggle d-inline-flex align-items-centerrounded border-0 collapse" data-bs-toggle="collapse">
             <b> 푸린씨의 무대</b>
           </button><br>
-          <button class="btn text-light btn-toggle d-inline-flex align-items-center btn-block-display rounded border-0 collapse" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
+          <button class="btn text-light btn-toggle d-inline-flex align-items-centerrounded border-0 collapse" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
             <b>뭐라도 좀 먹을까?</b>
           </button>
           <div class="collapse" id="home-collapse">
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
               <li><a href="./mainpage.html#section1" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-light"> 맛있겠지? </a></li>
-              <li><a href="./mainpage.html#section2" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-light"> 면 </a></li>
-              <li><a href="./mainpage.html#section3" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-light"> 고기  </a></li>
-              <li><a href="./mainpage.html#section4" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-light"> 후기 </a></li>
-              <li><a href="./mainpage.html#section5" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-light"> 장난감1 </a></li>
-              <li><a href="./mainpage.html#section6" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-light"> 장난감2 </a></li>
-              <li><a href="./mainpage.html#section7" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-light"> 장난감3 </a></li>
+              <li><a href="./mainpage.html#section2" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-light"> 프로필에 써 볼까? </a></li>
+              <li><a href="./mainpage.html#section3" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-light"> 메뉴 </a></li>
+              <li><a href="./mainpage.html#section4" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-light"> 면 </a></li>
+              <li><a href="./mainpage.html#section5" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-light"> 후기 </a></li>
+              <li><a href="./mainpage.html#section6" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-light"> 장난감1 </a></li>
+              <li><a href="./mainpage.html#section7" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-light"> 장난감2 </a></li>
+              <li><a href="./mainpage.html#section8" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-light"> 장난감3 </a></li>
             </ul>
           </div>
         </li>
         <li class="mb-1">
-          <button class="btn btn-toggle d-inline-flex align-items-centerbtn-block-display  rounded border-0 collapsed text-light" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
+          <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed text-light" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
             <b> 메뉴 생각중 </b>
           </button>
           <div class="collapse" id="dashboard-collapse">
@@ -100,7 +101,7 @@
             </ul>
           </div>
         </li>
-        <button onclick="changePage()" class="btn text-light btn-block-display btn-toggle d-inline-flex align-items-center rounded border-0 collapsed">
+        <button onclick="changePage()" class="btn text-light btn-toggle d-inline-flex align-items-center rounded border-0 collapsed">
           <b> 오리네 집으로</b>
         </button>
       </ul>
