--- a/cont_frontend_solo_project/index.html
+++ b/cont_frontend_solo_project/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="item stage-container">
-        <button class="item" id="showTime"> 공 연 시 작 <br>press here</button>
+        <button class="item" id="showTime"> 공 연 시 작 <br><span class="sub-text">press here</span></button>
         <div class='item'id="ceil-curtain"></div>
         <div class='item'id="l-curtain"></div>
         <div class='item'id="r-curtain"></div>
